# BootCamp

assignment/day1/: 1aAssignement1_bubblesort.cpp  1bAssignment_selection_sorting.cpp  1cAssign  1cAssign.cpp
assignment/day2_3/: ClassObjectEx1  ClassObjectEx1.cpp  d2assign1  d2assign1.cpp  d2assign1_stina  d2assign1_stina.cpp  d2assign1_stina_vers2.cpp  d2assign1_stina_vers2.cpp.cpp  d2assign2  d2assign2.cpp
assignment/day5/: ATMmachine.drawio  ~$ATMmachine.drawio.bkp
assignment/miniproject/: Bookstore  Bookstore.cpp  Bookstore2  Bookstore_20  CMakeLists.txt  bookshop_flowdiagram.drawio  bookshop_sequencediagram.drawio  bookstore.txt  main_bookstore.cpp  ~$bookshop_flowdiagram.drawio.bkp  ~$bookshop_sequence.drawio.bkp  ~$bookshop_sequencediagram.drawio.bkp
assignment/miniproject/include/: Bookstore.hpp
assignment/miniproject/oldstuff/: Bookstore_19  Bookstore_20_1  Bookstore_20_1.cpp  Bookstore_20_2.cpp
assignment/w2day1/: w2d1Assign1  w2d1Assign1.cpp  w2d1Assign_workshop  w2d1Assign_workshop.cpp  w2d1Assign_workshop2.cpp
assignment/w2day3/: Shape  Shape.cpp
assignment/w2day5/: assgin1_test  assgin1_test.cpp
assignment/w3day2/: w3d2Assign1  w3d2Assign1.cpp  w3d2Assign2.cpp
assignment/w3day4/: w3d4assign1  w3d4assign1.cpp
assignment/w4/: main_shapew4.cpp  shape  shapew4.hpp
exercises/: Enumtest  Enumtest.cpp  w2d1exercise1  w2d1exercise1.cpp
