cmake_minimum_required(VERSION 3.10)
set(CMAKE_CXX_STANDARD 17)
set(CMAKE_CXX_STANDARD_REQUIRED ON)

project(bookstore VERSION 1.0)


file(GLOB_RECURSE SRC_FILES src/*.cpp)
add_executable(bookstore main_bookstore.cpp Bookstore.cpp ${SRC_FILES})

target_include_directories(bookstore PUBLIC ${CMAKE_CURRENT_SOURCE_DIR}/include)
